Bug 79151 - Chart legend name not saved correctly when changed in Chart Data Table dialog
Summary: Chart legend name not saved correctly when changed in Chart Data Table dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.1.6.2 release
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:4.4.0 target:4.3.0.2 target:4.2.6
Keywords:
: 80384 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-05-23 19:09 UTC by Firas Hanife
Modified: 2015-02-02 08:12 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Testing file (18.30 KB, application/vnd.oasis.opendocument.text)
2014-05-23 19:09 UTC, Firas Hanife
Details
Screenshot (25.58 KB, image/png)
2014-05-23 19:10 UTC, Firas Hanife
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Firas Hanife 2014-05-23 19:09:57 UTC
Created attachment 99672 [details]
Testing file

Chart legend name does not survive closing/reopening the document.

- Steps to reproduce:
1) Open the attached document (Testing file)
2) Double-click on the chart
3) Right-click and select "Chart Data Table..." (under "Chart Type...")
4) Fill the legend name (red) (see the screenshot, where the mouse pointer is)
5) Save the document and close it
6) Reopen the document

Step 4 is not saved by LibreOffice as the chart does not remember it.
Comment 1 Firas Hanife 2014-05-23 19:10:26 UTC
Created attachment 99673 [details]
Screenshot
Comment 2 Jorendc 2014-05-23 19:12:42 UTC
Thanks for reporting and the clear bug report :-)!

Reproducible, tested using Windows 8.1 with LibreOffice Versie: 4.2.4.2 
Build ID: 63150712c6d317d27ce2db16eb94c2f3d7b699f8

Kind regards,
Joren
Comment 3 kvr2007 2014-06-09 21:35:46 UTC
Hello!

I was just going to post the same bug, but then I decided to look if it has already been detected. I can confirm it for LO 4.2.4.2 on 64-bit Ubuntu 12.04, Build ID: 420m0(Build:2). It happens while saving to *.ods and *.xls and impairs editing charts in Impress. What I have to do is: in Calc copy the chart and Paste Special > GDI Metafile, then copy the GDI Metafile and Paste Special > Bitmap (or PNG Bitmap, other options not tested).
Comment 4 Kohei Yoshida 2014-06-20 20:16:49 UTC
Did any of the previous releases handle this correctly?
Comment 5 Kohei Yoshida 2014-06-20 20:29:54 UTC
3.5 already has the same problem.  Looking at the code and git history, this may be a very old problem.
Comment 6 Kohei Yoshida 2014-06-21 02:19:37 UTC
I'll take this.  I've figured out the cause of the problem, but fixing it will take a bit of "creative thinking".
Comment 7 kvr2007 2014-06-21 18:34:59 UTC
Great to know that this bug is being taken care of! I actually remember a similar problem in OpenOffice 3.2 (included in Ubuntu Lucid), but I don't know how much they have in common with LO.
Good luck, Kohei!
Comment 8 Kohei Yoshida 2014-06-27 01:51:07 UTC
So, I'm afraid that the test document attached to this bug has already been corrupted, which causes the header data to be stored in the wrong place internally.

That said, I did find one bug that may cause the data table storage to get corrupted.  Let's see if fixing that will improve the situation a bit.
Comment 9 Commit Notification 2014-06-27 02:50:25 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ecde8155fefcdacb08177a10a4eddc24f6675b0b

fdo#79151: No need to offset column index by category labels.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2014-06-30 09:15:51 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=556412d3fa3916b1e1d0375fa999fdf92136b64e&h=libreoffice-4-3

fdo#79151: No need to offset column index by category labels.


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2014-06-30 09:18:07 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=eb4a6f38829bfb9e2569c2a9b6e0e0ad6277555c&h=libreoffice-4-2

fdo#79151: No need to offset column index by category labels.


It will be available in LibreOffice 4.2.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 kvr2007 2014-07-01 23:21:44 UTC
 Just checked the issue out on LO July,1 development version (4.2.6.0.0+
Build ID: 45c73dfd98321dd1977cfa7b7cfb3a92c1fb9a29). Seems to be working as expected.
 Of note, if the chart is already corrupt, there is nothing that can help it after save-reopen. What is more, if the chart was created in older versions (I guess it was OpenOffice 3.2) the bug does not always affect it. But I guess it doesn't really matter if everything works in version 4.2.6!
Comment 13 Jorendc 2014-07-14 11:14:10 UTC
*** Bug 80384 has been marked as a duplicate of this bug. ***
Comment 14 Joel Madero 2014-07-28 16:19:02 UTC
*** Bug 80384 has been marked as a duplicate of this bug. ***
Comment 15 raal 2015-01-30 20:29:22 UTC
(In reply to kvr2007 from comment #12)
>  Just checked the issue out on LO July,1 development version (4.2.6.0.0+
> Build ID: 45c73dfd98321dd1977cfa7b7cfb3a92c1fb9a29). Seems to be working as
> expected.
>  Of note, if the chart is already corrupt, there is nothing that can help it
> after save-reopen. What is more, if the chart was created in older versions
> (I guess it was OpenOffice 3.2) the bug does not always affect it. But I
> guess it doesn't really matter if everything works in version 4.2.6!

Should be this bug set as resolved fixed?
Comment 16 kvr2007 2015-02-02 08:12:17 UTC
Yep, it should have been marked fixed looong time ago!..