fdo#79151: No need to offset column index by category labels.

In fact, doing so would lead to a corrupt internal data table.  The
internal data stores category labels separately from the column data, so
there is no reason why we need to offset for category labels here.

(cherry picked from commit ecde8155fefcdacb08177a10a4eddc24f6675b0b)

Conflicts:
	chart2/source/controller/dialogs/DataBrowserModel.cxx

Change-Id: I29dd99e53837cba7a1e28d2a1ef39a5384378805